# prompt-forge

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: .env  .env.example  Dockerfile  jest.config.js  package.json  tsconfig.json
apps/api/src/: index.ts  server.ts
apps/api/tests/: health.test.ts  ideaDetector.test.ts
apps/engine/: .env.example  CMakeLists.txt  Dockerfile  README.md
apps/engine-gateway/: Dockerfile  cache.go  client.go  go.mod  handlers.go  main.go
apps/engine/src/: config.cpp  config.hpp  main.cpp
apps/engine/src/handlers/: handlers.cpp  handlers.hpp
apps/engine/src/inference/: classifier.cpp  classifier.hpp  retrieval.cpp  retrieval.hpp  tfidf.cpp  tfidf.hpp
apps/engine/src/models/: artifact.cpp  artifact.hpp
apps/ml-service/: Dockerfile  artifacts.py  main.py  models.py  pii.py  predict.py  requirements.txt  train.py
apps/retriever-cpp/: Dockerfile  Makefile  main.cpp  retriever.h
apps/trainer/: .env.example  Dockerfile  README.md  main.py  requirements.txt
apps/trainer/app/: __init__.py  config.py  database.py
apps/web/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/.next/: trace
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: BackgroundBlobs.tsx  ChatComposer.tsx  FeedbackBar.tsx  HistoryPanel.tsx  ModeToggle.tsx  NoiseOverlay.tsx  OutputPanel.tsx  Sidebar.tsx  Skeleton.tsx  Toast.tsx  UserMenu.tsx
apps/web/lib/: api.ts  auth.ts  groq.ts  models.ts  mongodb.ts  (+1 more)
(+57 files in other folders)
